# OpenCook

./: LICENSE  OPENCOOK.md  README.md  README_ZH.md  opencook_config.example.yaml  pyproject.toml  requirements.txt
code_agent/: __main__.py  cli.py
code_agent/agent/: __init__.py  agent.py  agent_basics.py  base_agent.py  code_agent.py
code_agent/memory/: __init__.py  config.py  episodic.py  manager.py  project.py  render.py  schema.py  working.py
code_agent/prompt/: __init__.py  agent_prompt.py
code_agent/session/: __init__.py  commands.py  render.py  runner.py  schema.py  store.py
code_agent/skills/: __init__.py  discovery.py  loader.py  manager.py  model.py  render.py
code_agent/subagents/: __init__.py  plan_agent.py  test_agent.py
code_agent/tools/: __init__.py  base.py  bash_tool.py  ckg_tool.py  database_execute_tool.py  database_verify_tool.py  dep_tool.py  edit_tool.py  json_edit_tool.py  mcp_tool.py  plan_subagent_tool.py  run.py  sequential_thinking_tool.py  skill_tool.py  task_done_tool.py  test_subagent_tool.py  understand_tool.py
code_agent/tools/ckg/: base.py  ckg_database.py
code_agent/tools/database/: duckdb_compile_test.py  postgresql_compile_test.py  sqlite_compile_test.py
code_agent/utils/: config.py  constants.py  demo_mode.py  encoding_utils.py  legacy_config.py  mcp_client.py  trajectory_recorder.py  trajectory_report.py
code_agent/utils/cli/: __init__.py  chat_console.py  cli_console.py  console_factory.py  rich_console.py  simple_console.py  textual_console.py  textual_console.tcss
open-cookbook/skill-creator/: SKILL.md
(+14 files in other folders)
