[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencook"
version = "0.1.0"
description = "OpenCook - project-specific personalization for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "weAIDB" }
]
dependencies = [
  "anthropic",
  "openai",
  "google-genai",
  "mcp",
  "ollama",
  "click",
  "prompt_toolkit",
  "rich",
  "textual",
  "numpy",
  "pandas",
  "tqdm",
  "sqlglot",
  "tree-sitter",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "python-dotenv",
  "pyyaml",
  "jsonpath-ng",
]

[project.scripts]
opencook = "code_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["code_agent*"]
